[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/UI/gui_paper.png" type="Texture" id=1]
[ext_resource path="res://Characters/Bats/Bats.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Scripts/ActorInfo.gd" type="Script" id=3]
[ext_resource path="res://Assets/pixel_font_dynamic.tres" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/UI/@pixel_iwart/bars.png" type="Texture" id=5]
[ext_resource path="res://ui_tileset.tres" type="TileSet" id=6]
[ext_resource path="res://Scenes/SpellButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Spells_UI_v2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/BuffButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Icons/release_v1.2-single_72.png" type="Texture" id=10]
[ext_resource path="res://Scenes/ItemIcon.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Items/Apple.png" type="Texture" id=12]
[ext_resource path="res://Characters/Rat/Rat.tres" type="SpriteFrames" id=13]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 352, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 472, 258, 8, 10 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 161, 225, 30, 30 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 161, 257, 30, 30 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 224, 150, 17, 10 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 5, 52, 41, 13 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 1, 67, 67, 13 )

[sub_resource type="DynamicFont" id=8]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 1, 67, 67, 13 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 5, 16, 37, 15 )

[sub_resource type="DynamicFont" id=10]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 2, 81, 37, 14 )

[node name="ActorInfo" type="Node2D"]
script = ExtResource( 3 )

[node name="SpellBg1" type="TileMap" parent="."]
position = Vector2( 66, 80 )
scale = Vector2( 1.4, 1.5 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 262148 )

[node name="SpellBg2" type="TileMap" parent="."]
position = Vector2( 66, 80 )
scale = Vector2( 1.4, 1.5 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 262144, 1, 0, 262146 )

[node name="SpellBg3" type="TileMap" parent="."]
position = Vector2( 66, 80 )
scale = Vector2( 1.4, 1.5 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 262144, 1, 0, 262145, 2, 0, 262146 )

[node name="SpellBg4" type="TileMap" parent="."]
position = Vector2( 66, 80 )
scale = Vector2( 1.4, 1.5 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 262144, 1, 0, 262145, 2, 0, 262145, 3, 0, 262146 )

[node name="SpellBg5" type="TileMap" parent="."]
position = Vector2( 66, 80 )
scale = Vector2( 1.4, 1.5 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 262144, 1, 0, 262145, 2, 0, 262145, 3, 0, 262145, 4, 0, 262146 )

[node name="ItemButton" type="Button" parent="."]
margin_left = 67.8409
margin_top = 23.0
margin_right = 81.8409
margin_bottom = 51.0
flat = true

[node name="ItemButtonBg" type="Sprite" parent="ItemButton"]
position = Vector2( -1, 14 )
scale = Vector2( 0.941, 0.908 )
texture = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="ItemButton"]
position = Vector2( -0.367844, 12.1103 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 12 )
flip_h = true

[node name="Shadow" type="Sprite" parent="ItemButton/Sprite"]
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
position = Vector2( 1.54184, 1.74696 )
texture = ExtResource( 12 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Fg3" type="Sprite" parent="ItemButton"]
position = Vector2( 10.3286, 3.9958 )
scale = Vector2( 0.934549, 0.904868 )
z_index = 1
texture = SubResource( 3 )

[node name="Label" type="Label" parent="ItemButton"]
margin_left = 1.19055
margin_top = 8.73071
margin_right = 15.1906
margin_bottom = 36.7307
rect_scale = Vector2( 0.6, 0.6 )
text = "6"

[node name="ItemButtonBgWide" type="TileMap" parent="."]
visible = false
position = Vector2( 5, 22 )
scale = Vector2( 0.91, 0.91 )
z_index = -1
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1, 1, 0, 2, 1, 524289, 3, 1, 524289, 4, 1, 1, 5, 1, 524289, 6, 1, 262146, 65537, 1, 131072, 65538, 1, 393217, 65539, 1, 393217, 65540, 1, 393217, 65541, 1, 131074 )

[node name="Sprite" type="Sprite" parent="ItemButtonBgWide"]
position = Vector2( 208.888, 14.515 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 12 )
flip_h = true

[node name="Shadow" type="Sprite" parent="ItemButtonBgWide/Sprite"]
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
position = Vector2( 1.54184, 1.74696 )
texture = ExtResource( 12 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Fg3" type="Sprite" parent="ItemButtonBgWide"]
position = Vector2( 220.01, 4.98268 )
scale = Vector2( 0.99778, 0.995653 )
z_index = 1
texture = SubResource( 3 )

[node name="ItemsWideButton" type="Button" parent="ItemButtonBgWide"]
margin_left = 193.0
margin_top = 1.0
margin_right = 223.0
margin_bottom = 31.0
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="BuffButton" type="Button" parent="."]
margin_left = 67.8409
margin_top = 52.0
margin_right = 81.8409
margin_bottom = 80.0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="BuffButtonBg" type="Sprite" parent="BuffButton"]
position = Vector2( -1, 13.9329 )
scale = Vector2( 0.941013, 0.908405 )
texture = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="BuffButton"]
position = Vector2( -1.96449, 14.3024 )
texture = ExtResource( 10 )
flip_h = true

[node name="Shadow" type="Sprite" parent="BuffButton/Sprite"]
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
position = Vector2( 1.54184, 1.74696 )
texture = ExtResource( 10 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Fg3" type="Sprite" parent="BuffButton"]
position = Vector2( 10.3124, 3.9228 )
scale = Vector2( 0.936862, 0.904681 )
z_index = 1
texture = SubResource( 3 )

[node name="Label" type="Label" parent="BuffButton"]
margin_left = 1.19055
margin_top = 8.73071
margin_right = 15.1906
margin_bottom = 36.7307
rect_scale = Vector2( 0.6, 0.6 )
text = "6"

[node name="BuffButtonBgWide" type="TileMap" parent="."]
visible = false
position = Vector2( 5, 22 )
scale = Vector2( 0.91, 0.91 )
z_index = -1
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1, 1, 0, 2, 1, 524289, 3, 1, 524289, 4, 1, 524289, 5, 1, 2, 65537, 1, 131072, 65538, 1, 393217, 65539, 1, 393217, 65540, 1, 131073, 65541, 1, 393217, 65542, 1, 262146 )

[node name="Sprite" type="Sprite" parent="BuffButtonBgWide"]
position = Vector2( 206.938, 48.0071 )
texture = ExtResource( 10 )
flip_h = true

[node name="Shadow" type="Sprite" parent="BuffButtonBgWide/Sprite"]
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
position = Vector2( 1.54184, 1.74696 )
texture = ExtResource( 10 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Fg3" type="Sprite" parent="BuffButtonBgWide"]
position = Vector2( 220.017, 37.0034 )
scale = Vector2( 0.997749, 1.00432 )
z_index = 1
texture = SubResource( 3 )

[node name="BuffWideButton" type="Button" parent="BuffButtonBgWide"]
margin_left = 192.0
margin_top = 32.0
margin_right = 224.0
margin_bottom = 63.0
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="Bg" type="TileMap" parent="."]
position = Vector2( 69, 65 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65538, 1, 0, -65537, 1, 2, -2, 1, 458754, -1, 1, 65538, 65534, 1, 65536, 65535, 1, 65538, 131070, 1, 131072, 131071, 1, 131074 )

[node name="StatsBg" type="Sprite" parent="."]
visible = false
position = Vector2( 37, 95 )
scale = Vector2( 1.68003, 1.81505 )
texture = SubResource( 4 )

[node name="ActorBg" type="Sprite" parent="."]
position = Vector2( 35.3497, 31.4539 )
scale = Vector2( 1.65873, 1.74603 )
texture = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="ActorBg"]
position = Vector2( 0, -3 )
scale = Vector2( 0.9, 0.9 )
frames = ExtResource( 13 )
animation = "Default"

[node name="Shadow" type="AnimatedSprite" parent="ActorBg/AnimatedSprite"]
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
position = Vector2( 1.19048, 0.952381 )
frames = ExtResource( 2 )
animation = "Default"
__meta__ = {
"_edit_lock_": true
}

[node name="Shadow" type="Sprite" parent="ActorBg"]
modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
position = Vector2( 2.57249, 1.92181 )
texture = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fg" type="Sprite" parent="."]
position = Vector2( 65.0178, 5.98261 )
scale = Vector2( 0.995117, 0.998252 )
z_index = 1
texture = SubResource( 3 )

[node name="Fg2" type="Sprite" parent="."]
position = Vector2( 14, 124 )
z_index = 1
texture = SubResource( 5 )

[node name="HealthBg" type="Sprite" parent="."]
position = Vector2( 35.9, 71.962 )
scale = Vector2( 1.31691, 1.52071 )
texture = SubResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="HealthBgWide" type="Sprite" parent="HealthBg"]
visible = false
position = Vector2( 13.023, 0 )
z_index = 2
texture = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="WideLabel" type="Label" parent="HealthBg/HealthBgWide"]
margin_left = -25.0
margin_top = -9.0
margin_right = 49.0
margin_bottom = 13.0
rect_scale = Vector2( 0.8, 0.7 )
custom_fonts/font = SubResource( 8 )
text = "120/120"
align = 1
valign = 1

[node name="Shadow" type="Sprite" parent="HealthBg/HealthBgWide"]
modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
position = Vector2( 2.98355, 1.99944 )
scale = Vector2( 0.998178, 0.992134 )
texture = SubResource( 11 )

[node name="Label" type="Label" parent="HealthBg"]
margin_left = -12.0
margin_top = -9.0
margin_right = 29.0
margin_bottom = 13.0
rect_scale = Vector2( 0.8, 0.7 )
custom_fonts/font = SubResource( 8 )
text = "120"
align = 1
valign = 1

[node name="Shadow" type="Sprite" parent="HealthBg"]
modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
position = Vector2( 3.03741, 1.95 )
texture = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="MouseDetect" type="Control" parent="HealthBg"]
anchor_left = 0.239
anchor_top = 0.5
anchor_right = 0.239
anchor_bottom = 0.5
margin_left = -30.799
margin_top = -13.5
margin_right = 10.201
margin_bottom = -0.5
__meta__ = {
"_edit_lock_": true
}

[node name="EnergyBg" type="Sprite" parent="."]
position = Vector2( 33, 93.883 )
scale = Vector2( 1.304, 1.35 )
texture = SubResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="EnergyBg"]
margin_left = -8.16106
margin_top = -11.4074
margin_right = 31.8389
margin_bottom = 14.5926
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 10 )
text = "12"
align = 1
valign = 1

[node name="Shadow" type="Sprite" parent="EnergyBg"]
modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
position = Vector2( 4.60238, 2.01968 )
texture = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="MouseDetect" type="Control" parent="EnergyBg"]
anchor_left = 0.239
anchor_top = 0.5
anchor_right = 0.239
anchor_bottom = 0.5
margin_left = -27.843
margin_top = -15.5
margin_right = 9.157
margin_bottom = -1.5
__meta__ = {
"_edit_lock_": true
}

[node name="StaminaBg" type="Sprite" parent="."]
position = Vector2( 33, 114.364 )
scale = Vector2( 1.304, 1.35 )
texture = SubResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="StaminaBg"]
margin_left = -8.16106
margin_top = -10.2315
margin_right = 31.8389
margin_bottom = 15.7685
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 10 )
text = "12"
align = 1
valign = 1

[node name="Shadow" type="Sprite" parent="StaminaBg"]
modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
position = Vector2( 4.60238, 2.01968 )
texture = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="MouseDetect" type="Control" parent="StaminaBg"]
anchor_left = 0.239
anchor_top = 0.5
anchor_right = 0.239
anchor_bottom = 0.5
margin_left = -27.843
margin_top = -13.0
margin_right = 9.157
margin_bottom = -1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Spells_UI" parent="." instance=ExtResource( 8 )]
margin_left = 72.974
margin_top = 88.0
margin_right = 256.974
margin_bottom = 112.0
rect_scale = Vector2( 1.3, 1.3 )
custom_constants/separation = 9
__meta__ = {
"_edit_lock_": true
}

[node name="SpellButton" parent="Spells_UI" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 24.0

[node name="SpellButton2" parent="Spells_UI" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 33.0
margin_right = 57.0
margin_bottom = 24.0

[node name="SpellButton3" parent="Spells_UI" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 66.0
margin_right = 90.0
margin_bottom = 24.0

[node name="SpellButton4" parent="Spells_UI" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 99.0
margin_right = 123.0
margin_bottom = 24.0

[node name="SpellButton5" parent="Spells_UI" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_right = 156.0
margin_bottom = 24.0

[node name="Buffs_UI" type="ScrollContainer" parent="."]
visible = false
margin_left = 85.8758
margin_top = 26.5371
margin_right = 174.876
margin_bottom = 80.5371
rect_scale = Vector2( 0.95, 0.95 )
__meta__ = {
"_edit_group_": true
}

[node name="GridContainer" type="GridContainer" parent="Buffs_UI"]
margin_right = 80.0
margin_bottom = 80.0
columns = 3

[node name="BuffButton" parent="Buffs_UI/GridContainer" instance=ExtResource( 9 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 24.0
margin_bottom = 24.0

[node name="BuffButton2" parent="Buffs_UI/GridContainer" instance=ExtResource( 9 )]
margin_left = 28.0
margin_top = 0.0
margin_right = 52.0
margin_bottom = 24.0

[node name="BuffButton3" parent="Buffs_UI/GridContainer" instance=ExtResource( 9 )]
margin_left = 56.0
margin_top = 0.0
margin_right = 80.0
margin_bottom = 24.0

[node name="BuffButton4" parent="Buffs_UI/GridContainer" instance=ExtResource( 9 )]
margin_left = 0.0
margin_top = 28.0
margin_right = 24.0
margin_bottom = 52.0

[node name="BuffButton5" parent="Buffs_UI/GridContainer" instance=ExtResource( 9 )]
margin_left = 28.0
margin_top = 28.0
margin_right = 52.0
margin_bottom = 52.0

[node name="BuffButton6" parent="Buffs_UI/GridContainer" instance=ExtResource( 9 )]
margin_left = 56.0
margin_top = 28.0
margin_right = 80.0
margin_bottom = 52.0

[node name="BuffButton7" parent="Buffs_UI/GridContainer" instance=ExtResource( 9 )]
margin_left = 0.0
margin_top = 56.0
margin_right = 24.0
margin_bottom = 80.0

[node name="Items_UI" type="GridContainer" parent="."]
visible = false
margin_left = 88.973
margin_top = 28.7838
margin_right = 152.973
margin_bottom = 67.7838
rect_scale = Vector2( 1.2, 1.2 )
custom_constants/vseparation = 5
custom_constants/hseparation = 8
columns = 3

[node name="ItemIcon" parent="Items_UI" instance=ExtResource( 11 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 16.0
margin_bottom = 17.0

[node name="ItemIcon2" parent="Items_UI" instance=ExtResource( 11 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 17.0

[node name="ItemIcon3" parent="Items_UI" instance=ExtResource( 11 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_top = 0.0
margin_right = 64.0
margin_bottom = 17.0

[node name="ItemIcon4" parent="Items_UI" instance=ExtResource( 11 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 22.0
margin_right = 16.0
margin_bottom = 39.0

[node name="ItemIcon5" parent="Items_UI" instance=ExtResource( 11 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 22.0
margin_right = 40.0
margin_bottom = 39.0

[node name="ItemIcon6" parent="Items_UI" instance=ExtResource( 11 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_top = 22.0
margin_right = 64.0
margin_bottom = 39.0

[connection signal="pressed" from="ItemButton" to="." method="_on_ItemButton_pressed"]
[connection signal="pressed" from="ItemButtonBgWide/ItemsWideButton" to="." method="_on_ItemsWideButton_pressed"]
[connection signal="pressed" from="BuffButton" to="." method="_on_BuffButton_pressed"]
[connection signal="pressed" from="BuffButtonBgWide/BuffWideButton" to="." method="_on_BuffWideButton_pressed"]
[connection signal="mouse_entered" from="HealthBg/MouseDetect" to="." method="_on_mouse_entered_health"]
[connection signal="mouse_exited" from="HealthBg/MouseDetect" to="." method="_on_mouse_exited_health"]
